--- a/QuickSort.ipynb
+++ b/QuickSort.ipynb
@@ -640,7 +640,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#3. **Tiempo de ejecución** \\\n",
+        "#3. **Tiempo de ejecución** \\n",
         "**Teorema (Tiempo de ejecución).**\n",
         "1. El algoritmo **Quick Sort** tiene un `tiempo de ejecución` de **o($n^2$)** en el peor caso.\n",
         "2. El algoritmo **Quick Sort** tiene un `tiempo de ejecución` de **o($n· logn$)** en el mejor caso.\n",
