--- a/MaxSubArray.ipynb
+++ b/MaxSubArray.ipynb
@@ -52,6 +52,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Aplicación:**  \n",
+        "Una posible aplicación de este problema es, por ejemplo, si quisieramos conseguir la mayor eficiencia y beneficio en distintas áreas laborales.  \n",
+        "Si nos dieran un futuro donde nos muestren la cantidad de peces que habrá en un lago cada día, si se aplica una solución a este problema, se podrá encontrar los días consecutivos que más provecho podemos sacar al ir a pescar, consiguiendo los días donde la suma de los peces sea la mayor posible dentro de los registros entregados."
+      ],
+      "metadata": {
+        "id": "brJ6RSiYCFKE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# 2. MaxSubArray"
       ],
       "metadata": {
@@ -79,66 +90,133 @@
     {
       "cell_type": "code",
       "source": [
-        "import random \n",
-        "from termcolor import colored as color\n",
-        "def MaxSubArray(array,low,high):\n",
-        "  if(len(array) == 1): return array[0]\n",
+        "# Librerias a usar\n",
+        "import matplotlib.pyplot as plt\n",
+        "import datetime\n",
+        "from timeit import repeat\n",
+        "import numpy as np\n",
+        "import random as rd\n",
+        "from termcolor import colored"
+      ],
+      "metadata": {
+        "id": "c896LRygDNLn"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maxSubArrayMid(A, low, mid, high):\n",
+        "    #Parte Izquierda\n",
+        "    maxSumLeft = -1000000\n",
+        "    sum = 0\n",
+        "    for i in range(mid, low-1, -1):\n",
+        "        sum += A[i]\n",
+        " \n",
+        "        if (sum > maxSumLeft):\n",
+        "            maxSumLeft = sum\n",
+        "            leftId = i\n",
+        "\n",
+        "    #Parte Derecha\n",
+        "    maxSumRight = -1000000\n",
+        "    sum = 0\n",
+        "    for i in range(mid, high+1):\n",
+        "        sum += A[i]\n",
+        " \n",
+        "        if (sum > maxSumRight):\n",
+        "            maxSumRight = sum\n",
+        "            rightId = i\n",
+        "\n",
+        "    B = A[leftId:rightId+1]\n",
+        "    sumB = maxSumRight + maxSumLeft - A[mid]\n",
+        "    \n",
+        "    return B, leftId, rightId, sumB\n",
+        " \n",
+        " \n",
+        "def maxSubArray(A, low, high):\n",
+        "    global verbose\n",
+        "\n",
+        "    if (low > high):\n",
+        "        return -1000000, -10000, -10000, -1000\n",
+        "\n",
+        "    if (low == high):\n",
+        "        #if (verbose): print(\"n = 1\")\n",
+        "        return A[low], low, high, A[low]\n",
+        "\n",
+        "    global llamadas \n",
+        "    mid = (low + high) // 2\n",
+        "    \n",
+        "    llamadas += 1\n",
+        "    leftArray, leftIdLeft, rightIdLeft, maxSumLeft = maxSubArray(A, low, mid-1)\n",
+        "\n",
+        "    llamadas += 1\n",
+        "    rightArray, leftIdRight, rightIdRight, maxSumRight = maxSubArray(A, mid+1, high)\n",
+        "\n",
+        "    midArray, leftIdMid, rightIdMid, maxSumMid = maxSubArrayMid(A, low, mid, high)\n",
+        "\n",
+        "    global pasadas\n",
+        "    pasadas += 1\n",
+        "    if (verbose):\n",
+        "      print(colored(f\"Pasada {pasadas}\",\"green\"),)\n",
         "  \n",
-        "  global llamadas\n",
-        "  mid = (low + high)//2\n",
-        "  left = array[:mid] \n",
-        "  right = array[mid:]\n",
+        "      print(colored(\"Sub-arreglo Izquierdo: \",\"blue\"),end=\"\")\n",
+        "      if not (hasattr(leftArray, \"__len__\")):\n",
+        "        print(colored(\"No hay\"))\n",
+        "      else:\n",
+        "        print(f\"{leftArray}\")\n",
         "\n",
-        "  max_left= MaxSubArray(left, 0, len(left))\n",
-        "  llamadas +=1\n",
-        "  max_right = MaxSubArray(right, 0, len(right))\n",
-        "  llamadas +=1\n",
-        "  max_mid = MaxMidArray(array, mid)\n",
-        "  \n",
-        "  return max(max_left, max_right, max_mid)\n",
+        "      print(colored(\"Sub-arreglo Derecho: \",\"blue\"),end=\"\")\n",
+        "      if not(hasattr(rightArray, \"__len__\")):\n",
+        "        print(\"No hay\")\n",
+        "      else:\n",
+        "        print(f\"{rightArray}\")\n",
+        "      \n",
+        "      print(colored(\"Sub-arreglo Medio: \",\"blue\"),f\"{midArray}\\n\")\n",
         "\n",
-        "\n",
-        "def MaxMidArray(array,mid):\n",
-        "  sum = 0\n",
-        "  max_left = -1000000000\n",
-        "  for i in array[mid-1::-1]:\n",
-        "    sum = sum +i\n",
-        "    if(sum > max_left):\n",
-        "      max_left = sum\n",
-        "\n",
-        "  sum = 0\n",
-        "  max_right = -1000000000\n",
-        "  for i in array[mid:]:\n",
-        "    sum = sum + i\n",
-        "    if(sum > max_right):\n",
-        "      max_right = sum \n",
-        "  return max_left + max_right\n",
-        "\n",
+        "    allMaxSum = max(maxSumLeft, maxSumRight, maxSumMid)\n",
+        "    if (allMaxSum == maxSumLeft): return leftArray, leftIdLeft, rightIdLeft, maxSumLeft\n",
+        "    if (allMaxSum == maxSumRight): return rightArray, leftIdRight, rightIdRight, maxSumRight\n",
+        "    return midArray, leftIdMid, rightIdMid, maxSumMid"
+      ],
+      "metadata": {
+        "id": "A3vgZO75tOTa"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# M A I N\n",
+        "n = rd.randint(4, 30)\n",
+        "A = rd.sample(range(-100, 100), n)\n",
         "llamadas = 0\n",
-        "var = random.randint(1,10)\n",
-        "a = random.sample(range(-100, 100), var)\n",
+        "pasadas = 0\n",
+        "verbose = False\n",
         "\n",
-        "b=MaxSubArray(a,0,len(a))\n",
-        "print(color(\"Entrada :\",\"red\"),a)\n",
-        "print(color(\"Suma Sub Arreglo : \",\"blue\"),b)\n",
-        "print(color(\"LLamadas recursivas : \", \"yellow\"),llamadas)"
+        "print(colored(\"Entrada:\", \"red\"),A,\"\\n\")\n",
+        "maxArray, leftIdx, rightIdx, maxSum = maxSubArray(A, 0, n-1)\n",
+        "print(colored(\"Salida:\",\"red\"), maxArray)\n",
+        "print(colored(f\"Suma máxima:\" ,\"red\"),maxSum)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yV9rUd7uo50M",
-        "outputId": "dfba0da1-377a-4f71-cd05-caabacc5d586"
+        "id": "O91hGg4IbLd4",
+        "outputId": "8f6b5804-dc3e-4da2-cc07-6d2fa68a0ae7"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[31mEntrada :\u001b[0m [27, -80]\n",
-            "\u001b[34mSuma Sub Arreglo : \u001b[0m 27\n",
-            "\u001b[33mLLamadas recursivas : \u001b[0m 2\n"
+            "\u001b[31mEntrada:\u001b[0m [98, -93, -11, 55, -13, 60, 40, 32, -1, -59, 34, 12, 20, -19, 36, -36, 89, 74, -87, 75, -42] \n",
+            "\n",
+            "\u001b[31mSalida:\u001b[0m [55, -13, 60, 40, 32, -1, -59, 34, 12, 20, -19, 36, -36, 89, 74]\n",
+            "\u001b[31mSuma máxima:\u001b[0m 324\n"
           ]
         }
       ]
@@ -159,28 +237,84 @@
         " \n",
         "    return max_so_far\n",
         " \n",
-        "var = random.randint(2,10)\n",
-        "A = random.sample(range(-100, 100), var)\n",
+        "var = rd.randint(2,10)\n",
+        "A = rd.sample(range(-100, 100), var)\n",
         "b=kadane(A)\n",
         "\n",
-        "print(color(\"Entrada :\",\"red\"),A)\n",
-        "print(color(\"Suma Sub Arreglo :\",\"blue\"),b)"
+        "print(colored(\"Entrada :\",\"red\"),A)\n",
+        "print(colored(\"Suma Sub Arreglo :\",\"blue\"),b)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbfd877c-5007-4d01-d402-3b04297c1a1a",
+        "outputId": "e8e4ae0a-ebd2-48eb-d623-adb5ddfef2fa",
         "id": "ZJJK5G1Hw6Bx"
       },
-      "execution_count": 15,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[31mEntrada :\u001b[0m [-51, -85]\n",
-            "\u001b[34mSuma Sub Arreglo :\u001b[0m 0\n"
+            "\u001b[31mEntrada :\u001b[0m [-13, -51, 11, -30, -12, 31, 68, 64, -65, 32]\n",
+            "\u001b[34mSuma Sub Arreglo :\u001b[0m 163\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# verbose = True\n",
+        "n = rd.randint(4, 15)\n",
+        "A = rd.sample(range(-100, 100), n)\n",
+        "llamadas = 0\n",
+        "pasadas = 0\n",
+        "verbose = True\n",
+        "\n",
+        "print(colored(\"Entrada:\", \"red\"),A,\"\\n\")\n",
+        "maxArray, leftIdx, rightIdx, maxSum = maxSubArray(A, 0, n-1)\n",
+        "print(colored(\"Salida:\",\"red\"), maxArray)\n",
+        "print(colored(f\"Suma máxima:\" ,\"red\"),maxSum)\n",
+        "if (verbose): \n",
+        "  print(colored(f\"Llamadas recursivas:\", \"yellow\"),llamadas)\n",
+        "  print(colored(f\"Comparaciones hechas:\", \"yellow\"),pasadas)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5SoB2gcEiian",
+        "outputId": "eda42923-3b9f-4753-f8eb-24a34af16cc8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mEntrada:\u001b[0m [-48, 22, -90, -52, 18, -79] \n",
+            "\n",
+            "\u001b[32mPasada 1\u001b[0m\n",
+            "\u001b[34mSub-arreglo Izquierdo: \u001b[0mNo hay\u001b[0m\n",
+            "\u001b[34mSub-arreglo Derecho: \u001b[0mNo hay\n",
+            "\u001b[34mSub-arreglo Medio: \u001b[0m [-48, 22]\n",
+            "\n",
+            "\u001b[32mPasada 2\u001b[0m\n",
+            "\u001b[34mSub-arreglo Izquierdo: \u001b[0mNo hay\u001b[0m\n",
+            "\u001b[34mSub-arreglo Derecho: \u001b[0mNo hay\n",
+            "\u001b[34mSub-arreglo Medio: \u001b[0m [18]\n",
+            "\n",
+            "\u001b[32mPasada 3\u001b[0m\n",
+            "\u001b[34mSub-arreglo Izquierdo: \u001b[0mNo hay\u001b[0m\n",
+            "\u001b[34mSub-arreglo Derecho: \u001b[0m[18]\n",
+            "\u001b[34mSub-arreglo Medio: \u001b[0m [22, -90]\n",
+            "\n",
+            "\u001b[31mSalida:\u001b[0m 22\n",
+            "\u001b[31mSuma máxima:\u001b[0m 22\n",
+            "\u001b[33mLlamadas recursivas:\u001b[0m 6\n",
+            "\u001b[33mComparaciones hechas:\u001b[0m 3\n"
           ]
         }
       ]
@@ -201,9 +335,9 @@
         "los cuales son entregados de forma aleatoria, donde el algoritmo busca encontrar la máxima suma encontrada de los subarreglos que genera, el array entregado inicialmente, este problema se busca resolverlo mediante una técnica ya conocida la cual es $divide$ $y$ $vencerás$, esta se aplicara durante la mantención del algoritmo que es cundo se busca el lado izquierdo y el derecho, además cuando se busca la máxima suma de los subarreglos.\n",
         "\n",
         "1.   Parte a la mitad el arreglo, dejando la la parte derecha en almacenada en un parámetro, haciendo lo mismo con el lado izquierdo, hay que destacar que estos datos son listas, o arreglos.\n",
-        "2.   Luego comienza a buscar los máximos de cada lado de forma recursiva , lado izquierdo (`max_left= MaxSubArray(left, 0, len(left))`), y lo mismo para el lado derecho(`max_right = MaxSubArray(right, 0, len(right))`), estos valoros son de tipo enteros.\n",
-        "3.   Ahora solo faltaría encontrar el subarreglo de al medio, o el que cruza los datos para luego comparar los datos, este se encuentra con una función aparte la cual se define $MaxMidArray$, la cual cumple con encontrar la suma que maximiza los elementos de al medio\n",
-        "4.   Finalmente se implementa la función de Python $max(max_left, max_right, max_mid)$ la cual me retorna el valor máximo, entre los parámetros enviados.\n"
+        "2.   Luego comienza a buscar los máximos de cada lado de forma recursiva , lado izquierdo, y lo mismo para el lado derecho, estos valoros son de tipo enteros.\n",
+        "3.   Ahora solo faltaría encontrar el subarreglo de al medio, o el que cruza los datos para luego comparar los datos\n",
+        "4.   Finalmente retorna nuestros datos requeridos\n"
       ],
       "metadata": {
         "id": "N6ly5zvhzuRv"
@@ -357,7 +491,7 @@
         "id": "WX-HP1xuaO_B",
         "outputId": "d0c578ba-c33b-4c37-a551-286f2a8db182"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -432,7 +566,7 @@
         "id": "X8pvU36xh0z0",
         "outputId": "235f0f85-50ff-45ff-a4f7-791199ec6a81"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
